2024-05-15T08:15:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9092276771 # 274
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-15
* notice: last 14d: unq all: 6 4090
* notice: prev accum: outdated-unq outdated-all / unq all: 2032 203998 / 2055 208139
* notice: next accum: outdated-unq outdated-all / unq all: 2032 203998 / 2057 208252
* notice: prev exec diff / last date diff / accum: unq all: +2 +113 -0 -119 / +2 +111 -0 -0 / 2 111
* notice: removed / changed dates: [] / [2024-05-01 2024-05-14 2024-05-15]

2024-05-15T00:54:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9088287428 # 273
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-15
* notice: last 14d: unq all: 6 4096
* notice: prev accum: outdated-unq outdated-all / unq all: 2031 203703 / 2055 208047
* notice: next accum: outdated-unq outdated-all / unq all: 2032 203998 / 2055 208139
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -45 / +3 +295 -0 -0 / 3 295
* notice: removed / changed dates: [2024-04-30] / [2024-05-01 2024-05-14]

2024-05-14T16:16:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9082707439 # 272
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-14
* notice: last 14d: unq all: 6 4089
* notice: prev accum: outdated-unq outdated-all / unq all: 2031 203703 / 2054 207955
* notice: next accum: outdated-unq outdated-all / unq all: 2031 203703 / 2055 208047
* notice: prev exec diff / last date diff / accum: unq all: +1 +92 -0 -91 / +3 +203 -0 -0 / 3 203
* notice: removed / changed dates: [] / [2024-04-30 2024-05-14]

2024-05-14T08:16:35Z: