@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-15T08:15:21Z",
-  "count" : 131,
-  "count_minmax" : [ 112, 295 ],
-  "count_decinc" : [ -164, +295 ],
+  "timestamp" : "2024-05-15T16:14:42Z",
+  "count" : 40,
+  "count_minmax" : [ 40, 295 ],
+  "count_decinc" : [ -255, +295 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
