@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-05-15T08:15:21Z",
+  "timestamp" : "2024-05-15T16:14:42Z",
   "count_outdated" : 203998,
   "uniques_outdated" : 2032,
-  "count" : 208252,
+  "count" : 208343,
   "uniques" : 2057,
   "clones" : [
     {
       "timestamp": "2024-05-01T00:00:00Z",
-      "count": 131,
-      "count_minmax": [ 112, 295 ],
-      "count_decinc": [ 164, 295 ],
+      "count": 40,
+      "count_minmax": [ 40, 295 ],
+      "count_decinc": [ 255, 295 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-05-15T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
+      "count": 202,
+      "count_minmax": [ 111, 202 ],
+      "count_decinc": [ 0, 202 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
