@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2024-05-01T00:00:00Z",
-      "count": 131,
+      "count": 40,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2024-05-15T00:00:00Z",
-      "count": 111,
+      "count": 202,
       "uniques": 2
     }
   ]
